force-app/main/default/objects/PgM_Solution_Option__c/PgM_Solution_Option__c.object-meta.xml
<CustomObject>
    <label>Solution Option</label>
    <nameField>
        <label>Solution Option Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Solution Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>