force-app/main/default/objects/PgM_Solution_Option__c/fields/PgM_Budget_Impact__c.field-meta.xml
<CustomField>
    <fullName>PgM_Budget_Impact__c</fullName>
    <label>Budget Impact</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>