force-app/main/default/objects/PgM_Solution_Option__c/fields/PgM_Cons__c.field-meta.xml
<CustomField>
    <fullName>PgM_Cons__c</fullName>
    <label>Cons</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>