force-app/main/default/objects/PgM_Solution_Option__c/fields/PgM_Governance_Request__c.field-meta.xml
<CustomField>
    <fullName>PgM_Governance_Request__c</fullName>
    <label>Governance Request</label>
    <referenceTo>PgM_Governance__c</referenceTo>
    <relationshipLabel>Solution Options</relationshipLabel>
    <relationshipName>Solution_Options</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>