force-app/main/default/objects/PgM_Solution_Option__c/fields/PgM_Impact_Description__c.field-meta.xml
<CustomField>
    <fullName>PgM_Impact_Description__c</fullName>
    <label>Impact Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>