force-app/main/default/objects/PgM_Solution_Option__c/fields/PgM_Impacts_Budget__c.field-meta.xml
<CustomField>
    <fullName>PgM_Impacts_Budget__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Impacts Budget</label>
    <type>Checkbox</type>
</CustomField>