force-app/main/default/objects/PgM_Solution_Option__c/fields/PgM_Impacts_Schedule__c.field-meta.xml
<CustomField>
    <fullName>PgM_Impacts_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Impacts Schedule</label>
    <type>Checkbox</type>
</CustomField>