force-app/main/default/objects/PgM_Solution_Option__c/fields/PgM_Integration_Needed__c.field-meta.xml
<CustomField>
    <fullName>PgM_Integration_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Integration Needed</label>
    <type>Checkbox</type>
</CustomField>