force-app/main/default/objects/PgM_Solution_Option__c/fields/PgM_Level_of_Customization__c.field-meta.xml
<CustomField>
    <fullName>PgM_Level_of_Customization__c</fullName>
    <label>Level of Customization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Simple Configuration</fullName>
            </value>
            <value>
                <fullName>Complex Configuration</fullName>
            </value>
            <value>
                <fullName>Some Custom Code</fullName>
            </value>
            <value>
                <fullName>Majority Custom Code</fullName>
            </value>
            <value>
                <fullName>Non Salesforce Code</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>