force-app/main/default/objects/PgM_Solution_Option__c/fields/PgM_Level_of_Effort__c.field-meta.xml
<CustomField>
    <fullName>PgM_Level_of_Effort__c</fullName>
    <label>Level of Effort</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>X-Small (&lt; 1 Week)</fullName>
            </value>
            <value>
                <fullName>Small (1-2 Weeks)</fullName>
            </value>
            <value>
                <fullName>Medium (2-4 Weeks)</fullName>
            </value>
            <value>
                <fullName>Large (4-8 Weeks)</fullName>
            </value>
            <value>
                <fullName>X-Large (&gt; 8 Weeks)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>