force-app/main/default/objects/PgM_Solution_Option__c/fields/PgM_Pros__c.field-meta.xml
<CustomField>
    <fullName>PgM_Pros__c</fullName>
    <label>Pros</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>