force-app/main/default/objects/PgM_Solution_Option__c/fields/PgM_Recommended_Solution__c.field-meta.xml
<CustomField>
    <fullName>PgM_Recommended_Solution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recommended Solution</label>
    <type>Checkbox</type>
</CustomField>