force-app/main/default/objects/PgM_Solution_Option__c/fields/PgM_Schedule_Impact__c.field-meta.xml
<CustomField>
    <fullName>PgM_Schedule_Impact__c</fullName>
    <label>Schedule Impact</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>