force-app/main/default/objects/PgM_Solution_Option__c/recordTypes/Solution_Option.recordType-meta.xml
<RecordType>
    <fullName>Solution_Option</fullName>
    <active>true</active>
    <label>Solution Option</label>
</RecordType>